feat: 合并 options 和 popup 的 dev 命令

--- a/popup-dev.html
+++ b/popup-dev.html
@@ -5,7 +5,7 @@
   <title>Title</title>
 </head>
 <body style="margin: 0">
-<iframe style="width: 500px;height: 500px;border:none;" id="iframe" src="http://localhost:17000/popup/popup.html"></iframe>
+<iframe style="width: 500px;height: 500px;border:none;" id="iframe" src="http://localhost:17000/pages/popup.html"></iframe>
 <script type="module" src="src/shared-dev-config.ts"></script>
 </body>
 </html>
