--- a/options-dev.html
+++ b/options-dev.html
@@ -5,7 +5,7 @@
   <title>Options</title>
 </head>
 <body style="margin: 0">
-<iframe style="width: 500px;height: 500px;border:none;" id="iframe" src="http://localhost:17001/options/options.html"></iframe>
+<iframe style="width: 500px;height: 500px;border:none;" id="iframe" src="http://localhost:17000/pages/options.html"></iframe>
 <script type="module" src="src/shared-dev-config.ts"></script>
 </body>
 </html>
