--- a/options-dev.html
+++ b/options-dev.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Options</title>
 </head>
-<body style="margin: 0">
-<iframe style="width: 500px;height: 500px;border:none;" id="iframe" src="http://localhost:17000/pages/options.html"></iframe>
-<script type="module" src="src/shared-dev-config.ts"></script>
+<body style="margin: 0; width: 100vw; height: 100vh;overflow: hidden">
+<iframe style="width: 100%;height: 100%;border:none;" id="iframe" src="http://localhost:17000/pages/options.html"></iframe>
+<script type="module" src="src/shared/dev/entry.ts"></script>
 </body>
 </html>
