--- a/popup-dev.html
+++ b/popup-dev.html
@@ -6,6 +6,6 @@
 </head>
 <body style="margin: 0">
 <iframe style="width: 500px;height: 500px;border:none;" id="iframe" src="http://localhost:17000/pages/popup.html"></iframe>
-<script type="module" src="src/shared-dev-config.ts"></script>
+<script type="module" src="src/shared/dev/entry.ts"></script>
 </body>
 </html>
